changed button height

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<p class="partner-p2">With our products, employers and health insurers can lower health care costs,
 						deliver meaningful clinical outcomes, and improve lives.</p>
 					<div>
-						<a href="https://airtable.com/shrat61EmHPHsyH9P">
+						<a href="mailto:hello@lifebox.ng">
 							<p class="button">Get in touch</p>
 						</a>
 					</div>
@@ -185,7 +185,7 @@
 						<p class="join-us-p1">If you share our passion and you want to work on products that impacts
 							millions of people, please join us.</p>
 					</div>
-					<a href="https://airtable.com/shrat61EmHPHsyH9P">
+					<a href="https://getsustainapp.medium.com/">
 						<p class="button">See current openings</p>
 					</a>
 				</div>
