--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<a class="nav-link" href="#products">Products</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://getsustainapp.medium.com/">Careers</a>
+						<a class="nav-link" href="https://lifebox-labs.notion.site/Lifebox-Labs-Careers-caed82beacb448cf9be9b380907caa19">Careers</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="mailto:hello@lifebox.ng">Contact us</a>
@@ -185,7 +185,7 @@
 						<p class="join-us-p1">If you share our passion and you want to work on products that impacts
 							millions of people, please join us.</p>
 					</div>
-					<a href="https://getsustainapp.medium.com/">
+					<a href="https://lifebox-labs.notion.site/Lifebox-Labs-Careers-caed82beacb448cf9be9b380907caa19">
 						<p class="button">See current openings</p>
 					</a>
 				</div>
@@ -199,9 +199,9 @@
 					<img src="./assets/lifebox-labs-logo-white.svg" alt="lifebox-labs-footer-logo">
 				</div>
 				<div class="footer-resources">
-					<p class="footer-link">Privacy policy</p>
-					<p class="footer-link">Terms of use</p>
-					<p class="footer-link">Cookie policy</p>
+					<a href="https://lifebox-labs.notion.site/Privacy-policy-9c564d4280694f34805e974ee3084c35"><p class="footer-link">Privacy policy</p></a>
+					<a href="https://lifebox-labs.notion.site/Terms-of-use-1dc563d01e574d108fdc23f4c51d2ee1"></a><p class="footer-link">Terms of use</p></a>
+					<a href="https://www.notion.so/lifebox-labs/Cookie-policy-57ad065b4f7741c19757ccff042a401b"><p class="footer-link">Cookie policy</p></a>
 					<a href="mailto:hello@lifebox.ng"><p class="footer-link">Contact us</p></a>
 				</div>
 				<div class="footer-socials">
