--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 						<a class="nav-link" href="#products">Products</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://lifebox-labs.notion.site/Lifebox-Labs-Careers-caed82beacb448cf9be9b380907caa19">Careers</a>
+						<a class="nav-link"
+							href="https://lifebox-labs.notion.site/Join-Lifebox-Labs-caed82beacb448cf9be9b380907caa19">Careers</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="mailto:hello@lifebox.ng">Contact us</a>
@@ -115,7 +116,8 @@
 						helping Africans prevent or treat chronic diseases.</p>
 					<p class="about-p2">Our simple idea is that we can make digital products that deliver evidence-based
 						therapeutic interventions to prevent, or treat chronic diseases, improve patient outcomes, and
-						reduce medical costs.</p>
+						reduce medical costs. We are helping people restore their health, joy, and vitality, and helping
+						them do things they previously could not do because they were ill.</p>
 				</div>
 			</div>
 		</div>
@@ -185,7 +187,7 @@
 						<p class="join-us-p1">If you share our passion and you want to work on products that impacts
 							millions of people, please join us.</p>
 					</div>
-					<a href="https://lifebox-labs.notion.site/Lifebox-Labs-Careers-caed82beacb448cf9be9b380907caa19">
+					<a href="https://lifebox-labs.notion.site/Join-Lifebox-Labs-caed82beacb448cf9be9b380907caa19">
 						<p class="button">See current openings</p>
 					</a>
 				</div>
@@ -199,10 +201,18 @@
 					<img src="./assets/lifebox-labs-logo-white.svg" alt="lifebox-labs-footer-logo">
 				</div>
 				<div class="footer-resources">
-					<a href="https://lifebox-labs.notion.site/Privacy-policy-9c564d4280694f34805e974ee3084c35"><p class="footer-link">Privacy policy</p></a>
-					<a href="https://lifebox-labs.notion.site/Terms-of-use-1dc563d01e574d108fdc23f4c51d2ee1"></a><p class="footer-link">Terms of use</p></a>
-					<a href="https://www.notion.so/lifebox-labs/Cookie-policy-57ad065b4f7741c19757ccff042a401b"><p class="footer-link">Cookie policy</p></a>
-					<a href="mailto:hello@lifebox.ng"><p class="footer-link">Contact us</p></a>
+					<a href="https://lifebox-labs.notion.site/Privacy-policy-9c564d4280694f34805e974ee3084c35">
+						<p class="footer-link">Privacy policy</p>
+					</a>
+					<a href="https://lifebox-labs.notion.site/Terms-of-use-1dc563d01e574d108fdc23f4c51d2ee1">
+						<p class="footer-link">Terms of use</p>
+					</a>
+					<a href="https://www.notion.so/lifebox-labs/Cookie-policy-57ad065b4f7741c19757ccff042a401b">
+						<p class="footer-link">Cookie policy</p>
+					</a>
+					<a href="mailto:hello@lifebox.ng">
+						<p class="footer-link">Contact us</p>
+					</a>
 				</div>
 				<div class="footer-socials">
 					<p>Follow us on:</p>
@@ -223,14 +233,20 @@
 	</section>
 
 	<script src="./js/script.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+		crossorigin="anonymous"></script>
 	<script
 		type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","description":"We make digital products that deliver evidence-based therapeutic interventions to prevent or treat chronic diseases, improve patient outcomes, and reduce medical costs.","url":"https://lifebox.ng/"}</script>
 	<script type="application/ld+json">{"@context":"http://schema.org","@id":"#creator","@type":"Organization"}</script>
 	<script
-		type="application/ld+json">{"@context":"http://schema.org","@id":"https://lifebox.ng#identity","@type":"Organization","address":{"@type":"PostalAddress","addressCountry":"Nigeria","addressRegion":"Lagos","postalCode":"101283","streetAddress":"Suite 16C, Gbaja Shopping Mall, Gbaja St, Surulere"},"contactPoint":[{"@type":"ContactPoint","contactType":"customer support","telephone":"+234 704 055 9724"}],"description":"We make digital products that deliver evidence-based therapeutic interventions to prevent or treat chronic diseases, improve patient outcomes, and reduce medical costs.","email":"hello@lifebox.ng","founder":"Joseph Anya","foundingDate":"2020","foundingLocation":"Lagos, Nigeria","image":{"@type":"ImageObject","height":"1080","url":"https://lifebox.ng/images/lifebox-labs.png","width":"1080"},"logo":{"@type":"ImageObject","height":"1080","url":"https://lifebox.ng/images/lifebox-labs.png","width":"1080"},"name":"Lifebox Labs","sameAs":["https://www.linkedin.com/company/lifebox-labs/","https://twitter.com/lifeboxlabs","https://www.facebook.com/lifeboxlabs/","https://www.instagram.com/lifeboxlabs/"],"telephone":"+234 704 055 9724","url":"https://lifebox.ng"}</script>
+		type="application/ld+json">{"@context":"http://schema.org","@id":"https://lifebox.ng#identity","@type":"Organization","address":{"@type":"PostalAddress","addressCountry":"Nigeria","addressRegion":"Lagos","postalCode":"101283","streetAddress":"Suite 16C, Gbaja Shopping Mall, Gbaja St, Surulere"},"contactPoint":[{"@type":"ContactPoint","contactType":"customer support","telephone":"+234 704 055 9724"}],"description":"We make digital products that deliver evidence-based therapeutic interventions to prevent or treat chronic diseases, improve patient outcomes, and reduce medical costs.","email":"hello@lifebox.ng","founder":"Joseph Anya","foundingDate":"2021","foundingLocation":"Lagos, Nigeria","image":{"@type":"ImageObject","height":"1080","url":"https://lifebox.ng/images/lifebox-labs.png","width":"1080"},"logo":{"@type":"ImageObject","height":"1080","url":"https://lifebox.ng/images/lifebox-labs.png","width":"1080"},"name":"Lifebox Labs","sameAs":["https://www.linkedin.com/company/lifebox-labs/","https://twitter.com/lifeboxlabs","https://www.facebook.com/lifeboxlabs/","https://www.instagram.com/lifeboxlabs/"],"telephone":"+234 704 055 9724","url":"https://lifebox.ng"}</script>
 </body>
 
 </html>
