--- a/index.html
+++ b/index.html
@@ -142,12 +142,24 @@
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="product2">	
-						<img src="./assets/sustain-logo.png" class="icon" alt="icon">
-						<h3>Project Skeen</h3>
-						<p class="description">Project Skeen is a tele-dermatology platform that provides treatment and customized prescriptions for people with skin conditions.</p>
-						<a>
-							<p class="button">Coming soon </p>
+					<div class="product2">
+						<img src="./assets/priv-logo.png" class="icon" alt="icon">
+						<h3>Priv Health</h3>
+						<p class="description">Priv is an online clinic dedicated to men's health issues. Get private and personalized treatment for sexual health, hair loss, and more.</p>
+						<a href="https://privhealth.co">
+						<p class="button">Learn more</p>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="row products-row">
+				<div class="col-md-6">
+					<div class="product1">
+						<img src="./assets/epidermis-logo.png" class="icon" alt="icon">
+						<h3>Epidermis</h3>
+						<p class="description">Epidermis is a tele-dermatology platform that provides treatment and customized prescriptions for people with skin conditions.</p>
+						<a href="https://epidermis.framer.website">
+							<p class="button">Learn more</p>
 						</a>
 					</div>
 				</div>
@@ -224,7 +236,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<p class="footer-text">Lifebox Labs Limited © 2022 All Rights Reserved</p>
+					<p class="footer-text">Lifebox Labs Limited © 2024 All Rights Reserved</p>
 				</div>
 			</div>
 		</div>
