--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 			<div class="row products-row">
 				<div class="col-md-6">
 					<div class="product1">
-						<img src="./assets/epidermis-logo.png" class="icon" alt="icon">
-						<h3>Epidermis</h3>
-						<p class="description">Epidermis is a tele-dermatology platform that provides treatment and customized prescriptions for people with skin conditions.</p>
-						<a href="https://epidermis.framer.website">
+						<img src="./assets/skeen-logo.png" class="icon" alt="icon">
+						<h3>Skeen</h3>
+						<p class="description">Skeen is a tele-dermatology platform that provides treatment and customized prescriptions for people with skin conditions.</p>
+						<a href="https://skeen.vercel.app">
 							<p class="button">Learn more</p>
 						</a>
 					</div>
